--- a/front/cart.html
+++ b/front/cart.html
@@ -13,7 +13,23 @@
         </header>
         <main>
             <article id ="cartItems">
-                
+            </article>
+            <article id = "totalPrice">
+            </article>
+            <article id ="formBox">
+                <form id = "customerForm">
+                    <label for="nom">Prénom : </label>
+                    <input type="text" id="firstName" name="firstName" required="required" placeholder="ex: Pierre" /></br>
+                    <label for="nom">Nom : </label>
+                    <input type="text" id="lastName" name="lastName" required="required" placeholder="ex: Dupont" /></br>
+                    <label for="nom">adresse : </label>
+                    <input type="text" id="address" name="address" required="required" placeholder="ex: 12 rue de Paris" /></br>
+                    <label for="nom">ville : </label>
+                    <input type="text" id="city" name="city" required="required" placeholder="ex: Paris" /></br>
+                    <label for="nom">Email : </label>
+                    <input type="email" id="email" name="email" required="required" placeholder="123@gmail.com" /></br>
+                </form>
+                <button id ="sendingForm">envoyer le formulaire</button>
             </article>
         </main>
         <footer>
