--- a/front/confirmation.html
+++ b/front/confirmation.html
@@ -8,10 +8,20 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <header>
+            <div class ="headerPictureBox">
+                <img class ="headerPicture" src="../front/img/logo.webp"></img>
+            </div>
+        </header>
         <main>
             <section id = "orderConfirmation">
             </section>
         </main>
+        <footer>
+            <div class ="footerPictureBox">
+                <img class ="footerPicture" src="./img/logo.webp"></img>
+            </div>
+        </footer>
         <script src="./js/confirmation.js" async defer></script>
     </body>
 </html>
