--- a/front/products.html
+++ b/front/products.html
@@ -9,15 +9,22 @@
     </head>
     <body>
         <header>
-            <h1>Orinoco - produit</h1>
+            <div class ="headerPictureBox">
+                <img class ="headerPicture" src="../front/img/logo.webp"></img>
+            </div>
         </header>
-        <main>
+        <main class="productsMain">
             <section id="product__container">
             </section>
-            <a href="./cart.html"><button class = "validation">Valider votre panier</button></a>
+                <div class="buttonsBox">
+                    <a class ="linkToCart" href="./cart.html"><button class = "validation">Valider votre panier</button></a>
+                    <a class ="backToIndex" href="../index.html"><button class="validation">choisir un autre produit</button></a>
+                </div>
         </main>
         <footer>
-            <h2>titre footer</h2>
+            <div class ="footerPictureBox">
+                <img class ="footerPicture" src="./img/logo.webp"></img>
+            </div>
         </footer>
         <script src="./js/Products.js" async defer></script>
     </body>
