--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     </head>
     <body>
         <header>
-            <h1>Orinoco</h1>
+            <div class ="headerPictureBox">
+                <img class ="headerPicture" src="./front/img/logo.webp"></img>
+            </div>
         </header>
         <main>
+            <h1 class="indexTitle">Bienvenue sur Orinoco! Choisissez vos produits!</h1>
             <section id="article__container">
             </section>
         </main>
         <footer>
-            <h2>titre footer</h2>
+            <div class ="footerPictureBox">
+                <img class ="footerPicture" src="./front/img/logo.webp"></img>
+            </div>
         </footer>
         <script src="./front/js/index.js" async defer></script>
     </body>
