--- a/front/cart.html
+++ b/front/cart.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <header>
-            <h1>Votre panier sur Orinoco</h1>
+            <div class ="headerPictureBox">
+                <img class ="headerPicture" src="../front/img/logo.webp"></img>
+            </div>
         </header>
         <main>
             <article id ="cartItems">
@@ -19,17 +21,17 @@
             <article id ="formBox">
                 <form id = "customerForm">
                     <label for="nom">Prénom : </label>
-                    <input type="text" id="firstName" name="firstName" required="required" placeholder="ex: Pierre" /></br>
+                    <input type="text" id="firstName" name="firstName" placeholder="ex: Pierre" required/></br>
                     <label for="nom">Nom : </label>
-                    <input type="text" id="lastName" name="lastName" required="required" placeholder="ex: Dupont" /></br>
+                    <input type="text" id="lastName" name="lastName" placeholder="ex: Dupont" required/></br>
                     <label for="nom">adresse : </label>
-                    <input type="text" id="address" name="address" required="required" placeholder="ex: 12 rue de Paris" /></br>
+                    <input type="text" id="address" name="address" placeholder="ex: 12 rue de Paris" required/></br>
                     <label for="nom">ville : </label>
-                    <input type="text" id="city" name="city" required="required" placeholder="ex: Paris" /></br>
+                    <input type="text" id="city" name="city" placeholder="ex: Paris" required/></br>
                     <label for="nom">Email : </label>
-                    <input type="email" id="email" name="email" required="required" placeholder="123@gmail.com" /></br>
+                    <input type="email" id="email" name="email" placeholder="123@gmail.com" required/></br>
+                    <input type="submit" id ="sendingForm" onclick="sendOrder()"></input>
                 </form>
-                <button id ="sendingForm">envoyer le formulaire</button>
             </article>
         </main>
         <footer>
