form in cart.js fixed

--- a/front/cart.html
+++ b/front/cart.html
@@ -30,12 +30,14 @@
                     <input type="text" id="city" name="city" placeholder="ex: Paris" required/></br>
                     <label for="nom">Email : </label>
                     <input type="email" id="email" name="email" placeholder="123@gmail.com" required/></br>
-                    <input type="submit" id ="sendingForm" onclick="sendOrder()"></input>
+                    <button id ="sendingForm">Valider</button>
                 </form>
             </article>
         </main>
         <footer>
-            <h1>titre footer</h1>
+            <div class ="footerPictureBox">
+                <img class ="footerPicture" src="./img/logo.webp"></img>
+            </div>
         </footer>
         <script src="./js/cart.js" async defer></script>
     </body>
