--- a/front/confirmation.html
+++ b/front/confirmation.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class ="headerPictureBox">
-                <img class ="headerPicture" src="../front/img/logo.webp"></img>
+                <img class ="headerPicture" src="./img/logo.webp"></img>
             </div>
         </header>
         <main>
