--- a/front/products.html
+++ b/front/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang ="fr">
     <head>
         <meta charset="utf-8">
         <title>Votre choix de produit - orinoco</title>
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class ="headerPictureBox">
-                <img class ="headerPicture" src="../front/img/logo.webp"></img>
+                <img class ="headerPicture" src="./img/logo.webp" alt= "logo Orinoco">
             </div>
         </header>
         <main class="productsMain">
@@ -23,7 +23,7 @@
         </main>
         <footer>
             <div class ="footerPictureBox">
-                <img class ="footerPicture" src="./img/logo.webp"></img>
+                <img class ="footerPicture" src="./img/logo.webp" alt= "logo Orinoco">
             </div>
         </footer>
         <script src="./js/Products.js" async defer></script>
