--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang= "fr">
     <head>
         <meta charset="utf-8">
         <title>listes des produits - orinoco</title>
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class ="headerPictureBox">
-                <img class ="headerPicture" src="./front/img/logo.webp"></img>
+                <img class ="headerPicture" src="./front/img/logo.webp" alt= "logo Orinoco">
             </div>
         </header>
         <main>
@@ -20,7 +20,7 @@
         </main>
         <footer>
             <div class ="footerPictureBox">
-                <img class ="footerPicture" src="./front/img/logo.webp"></img>
+                <img class ="footerPicture" src="./front/img/logo.webp" alt="logo Orinoco">
             </div>
         </footer>
         <script src="./front/js/index.js" async defer></script>
