--- a/front/confirmation.html
+++ b/front/confirmation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <title>Page de confirmation</title>
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class ="headerPictureBox">
-                <img class ="headerPicture" src="./img/logo.webp"></img>
+                <img class ="headerPicture" src="./img/logo.webp" alt= "logo orinoco">
             </div>
         </header>
         <main>
@@ -19,7 +19,7 @@
         </main>
         <footer>
             <div class ="footerPictureBox">
-                <img class ="footerPicture" src="./img/logo.webp"></img>
+                <img class ="footerPicture" src="./img/logo.webp" alt= "logo orinoco">
             </div>
         </footer>
         <script src="./js/confirmation.js" async defer></script>
