--- a/front/products.html
+++ b/front/products.html
@@ -17,8 +17,8 @@
             <section id="product__container">
             </section>
                 <div class="buttonsBox">
-                    <a class ="linkToCart" href="./cart.html"><button class = "validation">Valider votre panier</button></a>
-                    <a class ="backToIndex" href="../index.html"><button class="validation">choisir un autre produit</button></a>
+                    <button id= "validationButton">Valider votre panier</button>
+                    <button id = "buttonToIndex">choisir un autre produit</button>
                 </div>
         </main>
         <footer>
